# bfc

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod
.github/workflows/: build-terminal.yml  build.yml  test.yml
cmd/go-bf/: main.go
example/: hello.bf  noobie.bf  test.bf
internal/compiler/: base.go  compiler.go
internal/input/: readFile.go
internal/interpreter/: interpreter.go
internal/lexer/: lexer.go  tokens.go
internal/parser/: instructions.go  parser.go
internal/tokens/: tokens.go
scripts/: build.sh
src/: compiler.rs  interpreter.rs  main.rs  util.rs
src/lexing/: lexer.rs  tokens.rs
src/parsing/: parser.rs  tokens.rs
